Fix long table overflow

--- a/_sass/page-content.scss
+++ b/_sass/page-content.scss
@@ -75,8 +75,13 @@ section.page__content {
   table {
     display: table;
     width: auto;
+    width: fit-content;
     margin-left: auto;
     margin-right: auto;
+
+    tr, th, td {
+      word-break: break-word;
+    }
   }
 
   details {
